--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ a {
 }
 
 .hero {
-    margin: 0 auto;
     background-color: hsl(222.77deg 81.59% 53.14%);
     display: flex;
     flex-direction: column;
@@ -94,7 +93,6 @@ a {
     padding: 150px 300px;
     justify-content: center;
     align-items: center;
-    justify-content: space-between;
 }
 
 .container2 {
@@ -103,7 +101,6 @@ a {
     justify-content: center;
     background-color: hsl(0deg 0% 96.47%);
     align-items: center;
-    justify-content: space-between;
 }
 
 .container3 {
@@ -111,10 +108,10 @@ a {
     padding: 150px 300px;
     justify-content: center;
     align-items: center;
-    justify-content: space-between;
 }
 
 .container4 {
+    background-color: hsl(0deg 0% 96.47%);
     padding: 150px;
     display:flex;
     flex-direction: column;
